--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (max-width: 767px) {
+  .con {
+    width: calc(100vw - 10px);
+  }
+}
